--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
                                 <div class="row">
                                     <div class="buttons padd-15">
                                         <a href="https://drive.google.com/file/d/1QlwunpiNWB9W-NqKMLNOfLN9darZ95RE/view?usp=sharing" class="btn">Download CV</a>
+                                        <a href="https://youtu.be/BQl0sWcynx8" class="btn1">Video Resume</a>
                                     </div>
                                 </div>
                             </div>
