Education and experience

--- a/index.html
+++ b/index.html
@@ -26,15 +26,17 @@
     <div class="main-container">
         <!-- Aside -->
         <div class="aside">
-            <!--  Logo -->
-            <div class="logo">
-                <a href="#">Shammi</a>
-            </div>
-<!--            Nav Toggler Button-->
+            <!--            Nav Toggler Button-->
             <div class="nav-toggler">
                 <span></span>
             </div>
         <!-- Nav-->
+            <div class="aside-inner">
+            <!--  Logo -->
+            <div class="logo">
+                <a href="#">Shammi</a>
+            </div>
+
             <ul class="nav">
                 <li><a href="#home" class="active"><i class="fa fa-home"></i>Home</a></li>
                 <li><a href="#about"><i class="fa fa-user"></i>About Me</a></li>
@@ -48,6 +50,7 @@
             <div class="copyright-text">
                 &copy; All Rights reserved to Shumaiya Akter Shammi
             </div>
+                </div>
         </div>
         <!-- Aside End -->
         <!-- Main Content -->
@@ -214,6 +217,16 @@
                                 <div class="row">
                                     <div class="timeline-box padd-15">
                                     <div class="timeline shadow-dark">
+ <!--                                        Timeline Item-->
+                                        <div class="timeline-item">
+                                    <div class="circle-dot"></div>
+                                        <h6 class="timeline-date">
+                                        <i class="fa fa-calendar" style="font-size:15px;color:#00BFA5"></i> From November, 2020
+                                        </h6>
+                                            <h4 class="timeline-title">Intern at Apurba-DIU R&D Lab (ADRL)</h4>
+                                <p class="timeline-text">I am currently working as an intern in Apurba-DIU R&D Lab."Apurba-DIU R&D Lab" is a place where we research about the development of Bengali Letters so that Computer can easily recognize it. And this process is designed by Artificial Intelligence which is very important part of Machine Learning  where "ShubornoChoyon" application is used for this project.</p>
+                                </div>
+<!--                                        Timeline Item End-->
 <!--                                        Timeline Item-->
                                         <div class="timeline-item">
                                     <div class="circle-dot"></div>
@@ -443,6 +456,21 @@
                   <div class="portfolio-item-inner shadow-dark">
                       <div class="portfolio-img">
                           <img src="images/portfolio/6.png">
+                      </div>
+                      <div class="portfolio-info">
+                          <h4>Graphics Design</h4>
+                          <div class="icon">
+                          <i class="fa fa-search"></i>
+                          </div>
+                      </div>
+                    </div>
+                  </div>
+<!--                      portfolio Item End-->
+ <!--                      portfolio Item-->
+                  <div class="portfolio-item graphics-design padd-15" data-catagory="graphics-design">
+                  <div class="portfolio-item-inner shadow-dark">
+                      <div class="portfolio-img">
+                          <img src="images/portfolio/7.png">
                       </div>
                       <div class="portfolio-info">
                           <h4>Graphics Design</h4>
@@ -885,7 +913,7 @@
 <!--Lightbox-->
     <div class="lightbox">
     <div class="lightbox-content">
-       <div class="lightbox-close"><i class="fa fa-close"></i></div>
+<!--       <div class="lightbox-close"><i class="fa fa-close"></i></div>-->
         <img src="images/portfolio/2.png" class="lightbox-img" onclick="nextItem()">
         <div class="lightbox-caption">
             <div class="caption-text"></div>
