Button, experience Updated

--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
                                     <div class="buttons padd-15">
                                         <a href="https://drive.google.com/file/d/1QlwunpiNWB9W-NqKMLNOfLN9darZ95RE/view?usp=sharing" class="btn">Download CV</a>
                                         <a href="https://youtu.be/BQl0sWcynx8" class="btn1">Video Resume</a>
+                                         <a href="https://sites.google.com/diu.edu.bd/shumaiyaaktershammi/" class="btn2">Google Site</a>
                                     </div>
                                 </div>
                             </div>
@@ -237,16 +238,7 @@
                                 <div class="row">
                                     <div class="timeline-box padd-15">
                                     <div class="timeline shadow-dark">
-<!--                                        Timeline Item-->
-                                        <div class="timeline-item">
-                                    <div class="circle-dot"></div>
-                                        <h6 class="timeline-date">
-                                        <i class="fa fa-calendar" style="font-size:15px;color:#00BFA5"></i> From November, 2020
-                                        </h6>
-                                            <h4 class="timeline-title">Junior Visualizer at Collab Hub</h4>
-                                <p class="timeline-text">I am currently working as Junior Visualizer at Collab Hub. Here I am working as the member of the creative team where my designation is Junior Visualizer.</p>
-                                </div>
-<!--                                        Timeline Item End-->
+
  <!--                                        Timeline Item-->
                                         <div class="timeline-item">
                                     <div class="circle-dot"></div>
@@ -257,11 +249,21 @@
                                 <p class="timeline-text">I am currently working as an intern in Apurba-DIU R&D Lab."Apurba-DIU R&D Lab" is a place where we research about the development of Bengali Letters so that Computer can easily recognize it. And this process is designed by Artificial Intelligence which is very important part of Machine Learning  where "ShubornoChoyon" application is used for this project.</p>
                                 </div>
 <!--                                        Timeline Item End-->
+                                        <!--                                        Timeline Item-->
+                                        <div class="timeline-item">
+                                    <div class="circle-dot"></div>
+                                        <h6 class="timeline-date">
+                                        <i class="fa fa-calendar" style="font-size:15px;color:#00BFA5"></i> 2020
+                                        </h6>
+                                            <h4 class="timeline-title">Junior Visualizer at Collab Hub</h4>
+                                <p class="timeline-text">I am currently working as Junior Visualizer at Collab Hub. Here I am working as the member of the creative team where my designation is Junior Visualizer.</p>
+                                </div>
+<!--                                        Timeline Item End-->
 <!--                                        Timeline Item-->
                                         <div class="timeline-item">
                                     <div class="circle-dot"></div>
                                         <h6 class="timeline-date">
-                                        <i class="fa fa-calendar" style="font-size:15px;color:#00BFA5"></i> From August, 2020
+                                        <i class="fa fa-calendar" style="font-size:15px;color:#00BFA5"></i>August, 2020-December,2020
                                         </h6>
                                             <h4 class="timeline-title">Press Secretary at GCPC</h4>
                                 <p class="timeline-text">I am the Press Secretary at DIU GCPC(Daffodil International University Girls' Computer Programming Club) from where I learned how to write event details, formal mail, how to make Event Banner, Certificates etc.</p>
@@ -565,8 +567,8 @@
                             <div class="portfolio-info2">
                             <h4 class="project-title">Password Defender</h4>
                                 <p class="project-description">This is a project of making our passwords safer. This program can generate password randomly and which includes uppercase letters, lowercase letters, symbols, numbers and this convention of making password will make our information safer.</p>
-                                <p class="project-tags"><a href="#">Project Report</a></p>
-                                <p class="project-tags"><a href="#">Source Code</a></p>
+                                <p class="project-tags"><a href="https://drive.google.com/file/d/1n3EDZ1iXeVRWZ8ZXDrW6n1QYCzbnk0ja/view?usp=sharing">Project Report</a></p>
+                                <p class="project-tags"><a href="https://github.com/Shammi179/Password-Defender">Source Code</a></p>
                             </div>
                         </div>
                         </div>
