CV and Experience Updated

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="buttons padd-15">
-                                        <a href="https://drive.google.com/file/d/1QlwunpiNWB9W-NqKMLNOfLN9darZ95RE/view?usp=sharing" class="btn">Download CV</a>
+                                        <a href="https://drive.google.com/file/d/1xX2hmRDMYiubdXW93RbF6QE0O899yhvX/view?usp=sharing" class="btn">Download CV</a>
                                         <a href="https://youtu.be/BQl0sWcynx8" class="btn1">Video Resume</a>
                                          <a href="https://sites.google.com/diu.edu.bd/shumaiyaaktershammi/" class="btn2">Google Site</a>
                                     </div>
@@ -249,6 +249,16 @@
                                         <div class="timeline-item">
                                     <div class="circle-dot"></div>
                                         <h6 class="timeline-date">
+                                        <i class="fa fa-calendar" style="font-size:15px;color:#00BFA5"></i>February, 2021-Present
+                                        </h6>
+                                            <h4 class="timeline-title">Document Processing Engineer Trainee at ADRL</h4>
+                                <p class="timeline-text">I have been promoted after completing internship from Apurba-DIU Research and Development Lab as Document Processing Engineer Trainee.</p>
+                                </div>
+<!--                                        Timeline Item End-->
+ <!--                                        Timeline Item-->
+                                        <div class="timeline-item">
+                                    <div class="circle-dot"></div>
+                                        <h6 class="timeline-date">
                                         <i class="fa fa-calendar" style="font-size:15px;color:#00BFA5"></i>January, 2021-Present
                                         </h6>
                                             <h4 class="timeline-title">General Secretary at GCPC</h4>
@@ -260,7 +270,7 @@
                                         <div class="timeline-item">
                                     <div class="circle-dot"></div>
                                         <h6 class="timeline-date">
-                                        <i class="fa fa-calendar" style="font-size:15px;color:#00BFA5"></i> From November, 2020
+                                        <i class="fa fa-calendar" style="font-size:15px;color:#00BFA5"></i> From November, 2020-December, 2020
                                         </h6>
                                             <h4 class="timeline-title">Intern at Apurba-DIU R&D Lab (ADRL)</h4>
                                 <p class="timeline-text">I am currently working as an intern in Apurba-DIU R&D Lab."Apurba-DIU R&D Lab" is a place where we research about the development of Bengali Letters so that Computer can easily recognize it. And this process is designed by Artificial Intelligence which is very important part of Machine Learning  where "ShubornoChoyon" application is used for this project.</p>
