Logo added section added

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<link rel="stylesheet" href="css/style.css" type="text/css">
   <link rel="stylesheet" href="css/skins/color.css" type="text/css">
 <!--    My creativity-->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">    
+<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 </head>
 <body>
     
@@ -41,6 +41,7 @@
                 <li><a href="#home" class="active"><i class="fa fa-home"></i>Home</a></li>
                 <li><a href="#about"><i class="fa fa-user"></i>About Me</a></li>
                 <li><a href="#portfolio"><i class="fa fa-briefcase"></i>Portfolio</a></li>
+                <li><a href="#publication"><i class="fa fa-briefcase"></i>Publication</a></li>
                 <li><a href="#service"><i class="fa fa-list"></i>Service</a></li>
 <!--                <li><a href="#achievement"><i class="fa fa-trophy"></i>Achievement</a></li>-->
                 <li><a href="#blog"><i class="fa fa-envelope"></i>Blog</a></li>
@@ -68,6 +69,7 @@
 <!--                        <h2>I am <span></span></h2>-->
                         <div class="social-links">
                         <a href="https://www.linkedin.com/in/shumaiya-akter-shammi/"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://github.com/Shammi179"><i class="fa fa-github"></i></a>
                         <a href="https://www.facebook.com/shumaiyaakter.shammi"><i class="fa fa-facebook"></i></a>
                         <a href="https://www.instagram.com/shumaiya._shammi/"><i class="fa fa-instagram"></i></a>
                         <a href="https://twitter.com/ShammiShumaiya"><i class="fa fa-twitter"></i></a>
@@ -327,6 +329,36 @@
                 </div>  
             </section>
 <!--            About Section End-->
+<!--            Publication Section-->
+<section class="publication section" id="publication">
+    <div class="container">
+       <div class="row">
+
+        <div class="section-title padd-15">
+            <svg viewBox="665 -20 1350 110">
+            <text x="50%" y="50%" fill="transparent" text-anchore="middle">
+<!--                          fill="transparent" text-anchore="middle"-->
+                Publication
+                </text>
+            </svg>
+           </div>   
+        </div>
+        <div class="row">
+            
+
+        </div>
+
+        <div class="card-wrapper">
+<!--                  Publication item-->
+            <div class="publication-item">
+            <ul><li><a href="https://www.researchgate.net/publication/355893532_FishNet_Fish_Classification_using_Convolutional_Neural_Network">FishNet: Fish Classification using Convolutional Neural Network.</a></li></ul>
+        </div>
+            <!--                  publication item end-->
+        </div>
+
+        </div>
+     </section>
+<!--            Publication Section End-->
 <!--            Services Section-->
             <section class="service section" id="service">
               <div class="container">
